...
        <!--            android:id="@+id/button_cd_nav_to_resolve_answers"-->
        <!--            android:layout_width="67dp"-->
        <!--            android:layout_height="62dp"-->
        <!--            android:layout_gravity="bottom"-->
        <!--            android:layout_marginEnd="8dp"-->
        <!--            android:background="@drawable/button_next_step"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/button_cd_approve_and_scan_answers"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/button_cd_approve_and_scan_answers" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/textView_cd_processing_progress"-->
        <!--            android:layout_width="53dp"-->
...
